footer fixed, hover added, mobile horizontal scroll fixed

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -12,42 +12,3 @@
   padding: 0;
   margin: 0;
 }
-
-.card {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  border-radius: 10px;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.card__description {
-  display: flex;
-  background-color: white;
-  color: black;
-  padding: 25px 20px 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-  max-height: 67.813px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 29.05px;
-  text-align: left;
-}
-
-.card__like-button {
-  background: transparent url(../images/card\ like\ inactive.svg) center
-    no-repeat;
-  width: 21px;
-  height: 18px;
-  border: none;
-}
