--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -18,22 +18,32 @@
 }
 
 .profile__edit-button {
-  background: transparent url(../images/Profile\ Edit\ Button.svg) center
+  background: transparent url(../images/Profile+Edit+Button.svg) center
     no-repeat;
   height: 24px;
   width: 24px;
   grid-area: button;
   border: 1px;
   padding-right: 45px;
+  cursor: pointer;
+}
+
+.profile__edit-button:hover {
+  background: transparent url(../images/Edit+Button+hover.svg) center no-repeat;
 }
 
 .profile__add-button {
-  background: transparent url(../images/Profile\ Add\ Button.svg) center
-    no-repeat;
+  background: transparent url(../images/Profile+Add+Button.svg) center no-repeat;
   min-width: 150px;
   height: 50px;
   margin-left: auto;
   border: 2px;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.profile__add-button:hover {
+  background: transparent url(../images/Add+button+hover.svg) center no-repeat;
 }
 
 .profile__title {
@@ -45,8 +55,6 @@
   font-family: "Inter";
   font-weight: 500;
   width: 400px;
-  top: 181px;
-  left: 350px;
 }
 
 .profile__description {
